# ETH-studyapp

./: .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  README.md  requirements.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 39cfcc5e890d_add_hint_to_exercises_and_app_settings_.py  86cdd0c8c6e5_add_exam_mode_to_sessions.py  a1b2c3d4e5f6_feature_batch.py  b7e9c2d4f1a3_add_show_sources_to_sessions.py  c78969f7e469_add_subject_filetype_topiclist.py  db69bb333459_add_exam_profiles.py  ef05a6ac85f4_add_pre_generated_to_sessions.py
backend/app/: config.py  dependencies.py  main.py
backend/app/db/: engine.py
backend/app/llm/: client.py  cost_calculator.py  parsing.py  streaming.py  vision.py
backend/app/sandbox/: languages.py
backend/app/schemas/: budget.py  document.py  execution.py  exercise.py  session.py
backend/app/services/: budget_service.py  exam_profile_service.py  exercise_service.py  feedback_service.py  grading_service.py  hint_service.py  sandbox_service.py  session_generator.py  session_planner.py  session_service.py  settings_service.py  spaced_repetition.py  topic_service.py
backend/app/tasks/: ingest_task.py  worker.py
backend/app/vector_db/: client.py  collections.py  reranker.py  retriever.py
backend/data/: app.db
backend/data/chroma/: chroma.sqlite3
backend/scripts/: reindex.py
backend/tests/: conftest.py
backend/tests/integration/: test_budget_enforcement.py  test_ingestion_pipeline.py
backend/tests/unit/: test_cost_calculator.py  test_latex_cleaner.py  test_rag_improvements.py  (+2 more)
(+121 files in other folders)
